Fixed login button text overflow

--- a/store/static/css/loginSignup.scss
+++ b/store/static/css/loginSignup.scss
@@ -72,7 +72,7 @@
 			justify-content:center;
 			align-items:center;
 			text-align: center;
-			margin-top: 1rem 0rem;
+			padding: 1.5rem;
 			width:30rem;
 			height: 2rem;
 			border:2px solid #404351;
